--- a/novcompare.Rmd
+++ b/novcompare.Rmd
@@ -179,9 +179,34 @@ Perhaps Thanksgiving has a normalizing effect on these airlines. Frontier techni
 
 So flight delays are shorter during Thanksgiving. Surprise!
 
-But... what about the flights that aren't delayed, but just get flat-out cancelled, and thus don't even don't have a delay value to factor in? 
+Are there more long delays, though - say, those over 30 minutes? Let's consider that now.
 
-Let's take a look...
+```{r}
+delays_over_30 = alldates %>% filter(ARR_DELAY_NEW > 30)
+
+by_airline_30 = delays_over_30 %>% group_by(OP_UNIQUE_CARRIER,period) %>% summarize(delay = mean(ARR_DELAY_NEW,na.rm=TRUE))
+
+ggplot(by_airline_30,aes(x=OP_UNIQUE_CARRIER,y=delay,fill=period)) + 
+  geom_col(position='dodge') +
+  theme_calc() + 
+  xlab('Airline') +
+  ylab('Average Delay') +
+  ggtitle('Airline Delays In November... Before & During Thanksgiving') + 
+  labs(subtitle = '20 Days Before Thanksgiving Holiday vs. Thanksgiving Holiday') +
+  scale_colour_manual(
+    values = c('red','blue'),
+    aesthetics = c("colour", "fill")) +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  theme(plot.subtitle = element_text(hjust = 0.5)) +
+  guides(fill=guide_legend(title="Period")) +
+  theme(legend.title = element_text(hjust = 0.5))
+```
+
+It seems that long delays are a fairly random event across all airlines and dates, so not much to add there.
+
+But now... what about the flights that aren't delayed, but just get flat-out cancelled, and thus don't even don't have a delay value to factor in? 
+
+Let's take a look.
 
 ```{r}
 cancellations = alldates %>% 
